# en-ops-utils

./: .detect-secrets-ignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: branch-cicd.yaml  codeql-analysis.yml  issue-project-automation.yml  secrets-detection.yaml  sonarcloud.yaml  stable-cicd.yaml  unstable-cicd.yaml
conf/ldds/: config.yml
conf/ldds/templates/: dd-summary.template.shtml
scripts/context/: check_deprecated_lids.py  check_version_id_filename_match.py
scripts/ldds/: ldd-corral.py  list_open_release_prs.py  prep_for_ldd_release.sh  update-ldd-actions.py  update_ldds_with_template.sh
scripts/portal/: pds-sync-api.py
scripts/repos/: repo-corral.py  update_action.sh  update_templates.sh
scripts/sitemap/: previous_run.py
scripts/solr/: deprecated_solr_registry_pds3_export.py
src/pds/: __init__.py
src/pds/en_ops_utils/: __init__.py
src/pds/en_ops_utils/portal/: __init__.py  pds_sync_api.py
test/context/: test_check_deprecated_lids.py  test_check_version_id_filename_match.py
tests/pds/en_ops_utils/portal/: test_pds_sync_api.py
