# Packaging configuration for pds-en-ops-utils
#
# After installing with `pip install -e .[dev]` the `pds-sync-api` console
# script will be available on your PATH.

[metadata]
name = pds-en-ops-utils
author = PDS
author_email = pds_operator@jpl.nasa.gov
description = PDS Engineering Node operational scripts and utilities
long_description = file: README.md
long_description_content_type = text/markdown
version = file: src/pds/en_ops_utils/VERSION.txt
license = apache-2.0
keywords = pds, planetary data, engineering node, operations
url = https://github.com/NASA-PDS/en-ops-utils
download_url = https://github.com/NASA-PDS/en-ops-utils/releases/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent


[options]
install_requires =
    requests>=2.32.3
    lxml>=6.0.2

zip_safe = True
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.9


[options.extras_require]
dev =
    black>=23.0.0
    flake8>=6.0.0
    flake8-bugbear~=24.12.12
    flake8-docstrings~=1.7.0
    pep8-naming~=0.13.3
    mypy>=1.0.0
    pydocstyle~=6.3.0
    coverage~=7.3.0
    pytest>=7.0.0
    pytest-cov~=4.1.0
    pytest-watch~=4.2.0
    pytest-xdist~=3.3.1
    detect-secrets~=1.5.0
    pre-commit~=3.3.3
    tox~=4.11.0
    types-setuptools~=68.1.0.0
    types-requests

scripts =
    github3.py>=1.3.0
    pystache>=0.6.8
    PyYAML>=6.0
    pds.ldd-manager>=1.0.0
    pandas>=2.0.0
    GitPython>=3.1.0
    lasso>=0.1.0
    solr-to-es>=0.2.1


[options.entry_points]
console_scripts =
    pds-sync-api = pds.en_ops_utils.portal.pds_sync_api:main


[options.packages.find]
where = src


[coverage:run]
omit = */_version.py,*/__init__.py


[tool:pytest]
addopts = --numprocesses auto --cov=pds --cov-report=xml --cov-report=term


[flake8]
max-line-length = 120
extend-exclude = versioneer.py,_version.py,docs,tests,setup.py
docstring_convention = google
extend-ignore = E203, E501, W503
select = D,E,F,N,W,B,B902,B903,B950


[mypy]


[mypy-pds.*._version]
ignore_errors = True
